--- a/starter.html
+++ b/starter.html
@@ -1,4 +1,4 @@
-<html>
+html>
 <SCRIPT>
     var pos = 0;
     const pacArray = [
@@ -6,7 +6,7 @@
         ['PacMan3.png', 'PacMan4.png']
     ];
     var direction = 0;
-    const pacMen = []; // This array holds all the pacmen
+    const pacMen = [];
 
     function setToRandom(scale) {
         return {
@@ -14,10 +14,10 @@
             y: Math.random() * scale
         }
     }
-    // Factory to make a PacMan at a random position with random velocity
+    // Factory to make a PacMan 
     function makePac() {
-        // returns an object with random values scaled {x: 33, y: 21}
-        let velocity = setToRandom(10); // {x:?, y:?}
+        // returns an object with values scaled {x: 33, y: 21}
+        let velocity = setToRandom(10);
         let position = setToRandom(200);
         // Add image to div id = game
         let game = document.getElementById('game');
@@ -25,13 +25,10 @@
         newimg.style.position = 'absolute';
         newimg.src = 'PacMan1.png';
         newimg.width = 100;
-        //
-        // set position here 
-        //
-
-        // add new Child image to game
-        game.appendChild( ? ? ? );
-        // return details in an object
+        newimg.style.left = position.x;
+        newimg.style.top = position.y;
+        game.appendChild(newimg);
+        // new style of creating an object
         return {
             position,
             velocity,
@@ -53,9 +50,10 @@
     }
 
     function checkCollisions(item) {
-        //
-        // detect collision with all walls and make pacman bounce
-        //
+        if (item.position.x + item.velocity.x + item.newimg.width > window.innerWidth ||
+            item.position.x + item.velocity.x < 0) item.velocity.x = -item.velocity.x;
+        if (item.position.y + item.velocity.y + item.newimg.height > window.innerHeight ||
+            item.position.y + item.velocity.y < 0) item.velocity.y = -item.velocity.y;
     }
 
     function makeOne() {
